// Produced by Acceleo JavaScript Generator 1.1.2
import "./FlowIdentifier.proto";
import "./FlowStatus.proto";


package connection.protobuf;

message FlowFullStatus {
extensions 3 to 103;

  optional connection.protobuf.FlowStatus status = 1;
  optional connection.protobuf.FlowIdentifier identifier = 2;
}
