// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "./FlowElmt.proto";


package connection.protobuf;

message FlowList {
extensions 2 to 102;

  repeated connection.protobuf.FlowElmt flowElmts = 1;
}
