// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "./FlowSmallStatus.proto";


package connection.protobuf;

message FlowStatus {
extensions 2 to 102;

  optional connection.protobuf.FlowSmallStatus status = 1;
}
