// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";


package connection.protobuf;

message OperationDefinition {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING operationName = 1;
  repeated ccsds_mal.protobuf.STRING parameters = 2;
}
