// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/STRING.proto";
import "./ProcessInfo.proto";
import "./ProcessState.proto";

package connection.protobuf;

message ProcessFullState {
extensions 5 to 105;

  optional connection.protobuf.ProcessState processState = 1;
  optional ccsds_mal.protobuf.LONG processId = 2;
  optional ccsds_mal.protobuf.STRING functionOId = 3;
  optional connection.protobuf.ProcessInfo processInfo = 4;
}
