// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated code can't avoid too long lines" */
/* eslint-disable complexity, "DV6 TBC_CNES generated code can't avoid complexity" */
const UCPReport = require('./uCPReport');
const UCPParameter = require('./uCPParameter');
const FlowList = require('./flowList');
const ProcessFullState = require('./processFullState');
const InitStationConfiguration = require('./initStationConfiguration');
const CUOperationDefinition = require('./cUOperationDefinition');
const StationElmt = require('./stationElmt');
const CUIdentifier = require('./cUIdentifier');
const FlowFullStatus = require('./flowFullStatus');
const OperationDefinition = require('./operationDefinition');
const NominalStation = require('./nominalStation');
const CUStatus = require('./cUStatus');
const CUInfo = require('./cUInfo');
const InitFlowConfiguration = require('./initFlowConfiguration');
const FlowConfiguration = require('./flowConfiguration');
const StationFullStatus = require('./stationFullStatus');
const ProcessIdentifier = require('./processIdentifier');
const FlowSmallStatus = require('./flowSmallStatus');
const FlowInfo = require('./flowInfo');
const ProcessInfo = require('./processInfo');
const StationIdentifier = require('./stationIdentifier');
const StationStatus = require('./stationStatus');
const StationList = require('./stationList');
const FlowElmt = require('./flowElmt');
const CUFullStatus = require('./cUFullStatus');
const FlowIdentifier = require('./flowIdentifier');
const FlowStatus = require('./flowStatus');

module.exports = {
  UCPReport: { type: 'protobuf', adapter: UCPReport },
  UCPParameter: { type: 'protobuf', adapter: UCPParameter },
  FlowList: { type: 'protobuf', adapter: FlowList },
  ProcessFullState: { type: 'protobuf', adapter: ProcessFullState },
  InitStationConfiguration: { type: 'protobuf', adapter: InitStationConfiguration },
  CUOperationDefinition: { type: 'protobuf', adapter: CUOperationDefinition },
  StationElmt: { type: 'protobuf', adapter: StationElmt },
  CUIdentifier: { type: 'protobuf', adapter: CUIdentifier },
  FlowFullStatus: { type: 'protobuf', adapter: FlowFullStatus },
  OperationDefinition: { type: 'protobuf', adapter: OperationDefinition },
  NominalStation: { type: 'protobuf', adapter: NominalStation },
  CUStatus: { type: 'protobuf', adapter: CUStatus },
  CUInfo: { type: 'protobuf', adapter: CUInfo },
  InitFlowConfiguration: { type: 'protobuf', adapter: InitFlowConfiguration },
  FlowConfiguration: { type: 'protobuf', adapter: FlowConfiguration },
  StationFullStatus: { type: 'protobuf', adapter: StationFullStatus },
  ProcessIdentifier: { type: 'protobuf', adapter: ProcessIdentifier },
  FlowSmallStatus: { type: 'protobuf', adapter: FlowSmallStatus },
  FlowInfo: { type: 'protobuf', adapter: FlowInfo },
  ProcessInfo: { type: 'protobuf', adapter: ProcessInfo },
  StationIdentifier: { type: 'protobuf', adapter: StationIdentifier },
  StationStatus: { type: 'protobuf', adapter: StationStatus },
  StationList: { type: 'protobuf', adapter: StationList },
  FlowElmt: { type: 'protobuf', adapter: FlowElmt },
  CUFullStatus: { type: 'protobuf', adapter: CUFullStatus },
  FlowIdentifier: { type: 'protobuf', adapter: FlowIdentifier },
  FlowStatus: { type: 'protobuf', adapter: FlowStatus },
};
